--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
   "author": "Habitat",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "pg": "^8.7.3"
