--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -1,6 +1,6 @@
 services:
   api:
-    container_name: debug_dev_api
+    container_name: Api
     ports: 
       - 3000:3000
     environment: 
@@ -15,7 +15,7 @@ services:
     command: bash -c "npm install && npm run seedDev && npm run dev"
 
   db:
-    container_name: debug_dev_db
+    container_name: Database
     volumes:
       - "dbdata:/var/lib/postgresql/data"
     environment: 
@@ -26,4 +26,4 @@ volumes:
   dbdata:
 networks: 
   default:
-    name: debug_api
+    name: Api
