--- a/api/package.json
+++ b/api/package.json
@@ -22,8 +22,12 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.3",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "express-session": "^1.17.0"
   },
   "devDependencies": {
     "jest": "^27.5.1",
