--- a/api/package.json
+++ b/api/package.json
@@ -21,13 +21,11 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
     "express": "^4.17.3",
-    "pg": "^8.7.3",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
-    "express-session": "^1.17.0"
+    "pg": "^8.7.3"
   },
   "devDependencies": {
     "jest": "^27.5.1",
