added new controller methods and routes for login, register etc...

--- a/api/package.json
+++ b/api/package.json
@@ -25,7 +25,8 @@
     "cors": "^2.8.5",
     "jsonwebtoken": "^8.5.1",
     "express": "^4.17.3",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "cookie-parser": "^1.4.6"
   },
   "devDependencies": {
     "jest": "^27.5.1",
